# g-emb

./: .gitignore  README.md  command_line.py  pyproject.toml
data/: download_grch38.sh
gemb/: cli.py  data.py  label.py
