[tool.poetry]
name = "gemb"
version = "0.1.0"
description = "g-emb"
authors = ["Paul Morris <ptmorris03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
transformers = "^4.34.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[tool.poetry.scripts]
gemb = "command_line:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
